--- a/streamdeck-obstools/manifest.json
+++ b/streamdeck-obstools/manifest.json
@@ -156,17 +156,17 @@
           "Name": "Start"
         },
         {
-          "Image": "Images/pluginAction",
+          "Image": "Images/recordingAction",
           "Name": "Stop",
           "OnlyForMultiAction": true
         },
         {
-          "Image": "Images/pluginAction",
+          "Image": "Images/recordingAction",
           "Name": "Pause",
           "OnlyForMultiAction": true
         },
         {
-          "Image": "Images/pluginAction",
+          "Image": "Images/recordingAction",
           "Name": "Resume",
           "OnlyForMultiAction": true
         }
@@ -188,7 +188,7 @@
           "Name": "Start"
         },
         {
-          "Image": "Images/pluginAction",
+          "Image": "Images/streamAction",
           "Name": "Stop",
           "OnlyForMultiAction": true
         }
@@ -301,12 +301,12 @@
           "Name": "Toggle"
         },
         {
-          "Image": "Images/pluginAction",
+          "Image": "Images/sourceAction",
           "Name": "Show",
           "OnlyForMultiAction": true
         },
         {
-          "Image": "Images/pluginAction",
+          "Image": "Images/sourceAction",
           "Name": "Hide",
           "OnlyForMultiAction": true
         }
@@ -317,6 +317,39 @@
       "UUID": "com.barraider.obstools.sourcetoggle",
       "PropertyInspectorPath": "PropertyInspector/SourceToggle.html"
     },
+    {
+      "Icon": "Images/icon",
+      "Name": "Source Monitor Set",
+      "States": [
+        {
+          "Image": "Images/volumeAction",
+          "TitleAlignment": "middle",
+          "FontSize": "13"
+        }
+      ],
+      "SupportedInMultiActions": true,
+      "DisableCaching": true,
+      "Tooltip": "Set the monitor type of an audio source in OBS",
+      "UUID": "com.barraider.obstools.sourcemonitorsetter",
+      "PropertyInspectorPath": "PropertyInspector/SourceAudioMonitor.html"
+    },
+    {
+      "Icon": "Images/icon",
+      "Name": "Source Mute Toggle",
+      "States": [
+        {
+          "Image": "Images/volumeAction",
+          "TitleAlignment": "middle",
+          "FontSize": "13"
+        }
+      ],
+      "SupportedInMultiActions": true,
+      "DisableCaching": true,
+      "Tooltip": "Toggles the mute on an audio source in OBS",
+      "UUID": "com.barraider.obstools.sourcemutetoggle",
+      "PropertyInspectorPath": "PropertyInspector/SourceMuteToggle.html"
+    },
+
     {
       "Icon": "Images/icon",
       "Name": "Source Volume Adjust",
@@ -389,6 +422,33 @@
       "Tooltip": "Configure different videos to play on a single Media source",
       "UUID": "com.barraider.obstools.videoplayer",
       "PropertyInspectorPath": "PropertyInspector/VideoPlayer.html"
+    },
+    {
+      "Icon": "Images/icon",
+      "Name": "Virtual Camera",
+      "States": [
+        {
+          "Image": "Images/vcamAction",
+          "TitleAlignment": "middle",
+          "FontSize": "13",
+          "Name": "Toggle"
+        },
+        {
+          "Image": "Images/vcamAction",
+          "Name": "Start",
+          "OnlyForMultiAction": true
+        },
+        {
+          "Image": "Images/vcamAction",
+          "Name": "Stop",
+          "OnlyForMultiAction": true
+        }
+      ],
+      "SupportedInMultiActions": true,
+      "DisableCaching": true,
+      "Tooltip": "Toggle Virtual Camera on and off",
+      "UUID": "com.barraider.obstools.virtualcamera",
+      "PropertyInspectorPath": "PropertyInspector/VirtualCamera.html"
     }
   ],
   "Author": "BarRaider",
@@ -396,7 +456,7 @@
   "Name": "OBS Tools",
   "Icon": "Images/pluginIcon",
   "URL": "https://BarRaider.com/",
-  "Version": "2.3.1",
+  "Version": "2.3.2",
   "DefaultWindowSize": [ 620, 750 ],
   "CodePath": "com.barraider.obstools",
   "Category": "OBS Tools [BarRaider]",
