--- a/streamdeck-obstools/OBSTools.csproj
+++ b/streamdeck-obstools/OBSTools.csproj
@@ -12,12 +12,19 @@
 		<Copyright>Copyright ©  2020</Copyright>
 		<OutputPath>bin\$(Configuration)\com.barraider.obstools.sdPlugin\</OutputPath>
 		<LangVersion>8.0</LangVersion>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
 		<DebugType>full</DebugType>
 	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+	  <DebugType>full</DebugType>
+	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
 		<DebugType>pdbonly</DebugType>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+	  <DebugType>pdbonly</DebugType>
 	</PropertyGroup>
 	<PropertyGroup>
 		<ApplicationIcon>brlogo.ico</ApplicationIcon>
@@ -42,8 +49,7 @@
 		<PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Primitives" Version="6.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="NLog" Version="5.0.1" />
-		<PackageReference Include="obs-websocket-dotnet" Version="4.9.1" />
+		<PackageReference Include="NLog" Version="5.0.4" />
 		<PackageReference Include="Serilog" Version="2.11.0" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
 		<PackageReference Include="streamdeck-client-csharp" Version="4.3.0" />
@@ -64,7 +70,7 @@
 		<PackageReference Include="System.Security.Cryptography.X509Certificates" Version="4.3.2" />
 		<PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
 		<PackageReference Include="System.ValueTuple" Version="4.5.0" />
-		<PackageReference Include="TwitchLib.Client" Version="3.2.4" />
+		<PackageReference Include="TwitchLib.Client" Version="3.2.6" />
 		<PackageReference Include="TwitchLib.Communication" Version="1.0.4" />
 		<PackageReference Include="WebSocketSharp-netstandard" Version="1.0.1" />
 	</ItemGroup>
@@ -278,10 +284,10 @@
 		<Content Include="PropertyInspector\SourceToggle.js">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Include="PropertyInspector\SourceAudioMonitor.html">
+		<Content Include="PropertyInspector\InputAudioMonitor.html">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Include="PropertyInspector\SourceMuteToggle.html">
+		<Content Include="PropertyInspector\InputMuteToggle.html">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
 		<Content Include="PropertyInspector\Streaming.html">
@@ -305,10 +311,10 @@
 		<Content Include="PropertyInspector\SourceAnimation.html">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Include="PropertyInspector\SourceVolumeAdjuster.js">
+		<Content Include="PropertyInspector\InputVolumeAdjuster.js">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Include="PropertyInspector\SourceVolumeAdjuster.html">
+		<Content Include="PropertyInspector\InputVolumeAdjuster.html">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
 		<Content Include="PropertyInspector\SetProfile.html">
@@ -380,10 +386,10 @@
 		<Content Include="PropertyInspector\BrowserSource.js">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Include="PropertyInspector\SourceVolume.html">
+		<Content Include="PropertyInspector\InputVolume.html">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Include="PropertyInspector\SourceVolume.js">
+		<Content Include="PropertyInspector\InputVolume.js">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
 		<Content Include="PropertyInspector\ImageSettings.html">
@@ -446,6 +452,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\..\..\DotNet\OTI.Shared\OTI.Shared.csproj" />
+		<ProjectReference Include="..\..\obs-websocket-dotnet-v5\obs-websocket-dotnet\obs-websocket-dotnet.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Remove="Wrappers\TwitchChat.cs" />
